--- a/atm/Gemfile
+++ b/atm/Gemfile
@@ -37,6 +37,9 @@ gem 'thin', '~> 1.6.0'
 # gem 'activeadmin', github: 'gregbell/active_admin'
 gem 'faker'
 gem 'rabl'
+
+gem "therubyracer"
+gem "less-rails"
 gem 'twitter-bootstrap-rails'
 
 group :development do
