Changes database to mysql

--- a/atm/Gemfile
+++ b/atm/Gemfile
@@ -4,8 +4,7 @@ ruby '2.0.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.4'
 
-# Use postgres as the database for Active Record
-gem 'pg'
+gem 'mysql2'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.2'
@@ -54,13 +53,13 @@ end
 
 group :test do
   gem 'simplecov', '~> 0.7.1', :require => false
-  gem 'capybara'
+  # gem 'capybara'
   # gem 'database_cleaner', '1.0.1'
   gem 'email_spec'
   gem 'codeclimate-test-reporter', require: nil
-  gem 'capybara-webkit'
-  gem 'selenium-webdriver'
-  gem 'headless'
+  # gem 'capybara-webkit'
+  # gem 'selenium-webdriver'
+  # gem 'headless'
 end
 
 group :production do
